[gd_scene load_steps=2 format=3 uid="uid://bjt8my2bhunnc"]

[ext_resource type="Script" uid="uid://f0f2td4hsyey" path="res://Scenes/levels_screen.gd" id="1_5rih2"]

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rih2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -189.0
offset_top = -118.0
offset_right = 1403.0
offset_bottom = 822.0
color = Color(0.54509807, 0.54509807, 0.54509807, 1)

[node name="Lvl1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 154.0
offset_top = -38.0
offset_right = 329.0
offset_bottom = 39.0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Lvl2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -38.5
offset_right = 87.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 2"

[node name="Lvl3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -36.0
offset_right = -158.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 3"

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
